--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,24 @@
 	<title>Movie Search App</title>
 	<link rel="stylesheet" type="text/css" href="/app.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
+
+<body>
+	<nav id="navTop" class="navbar navbar-default">
+		<div id="containerText" class="container-fluid">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="/">YMDb</a>
+			</div>
+			<div class="collapse navbar-collapse">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="/">Login</a></li>
+					<li><a href="/">Sign Up</a></li>
+					<li><a href="/">Logout</a></li>
+					
+				</ul>
+			</div>
+		</div>
+	</nav>
 
