--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,30 +1,42 @@
 <% include partials/header%>
 
-<h1>Results Page</h1>
+<div class="container">
+	<header class="jumbotron">
+		<div class="container">
+			<h1> Your Movie Search Results</h1>
+			<form id="newSearchInput" action="/results" method="GET">
+				<div>	
+					<input class="form-control" type="text" name="search" placeholder="Enter Movie Title Here" >
+				</div>
+				<div class="form-group">
+					<input class="btn btn-primary btn-large btn-block" type= "submit">
+				</div>
+			</form>
+		</div>	
+	</header>
 
-<form action="/results" method="GET">
-	<input type="text" name="search" placeholder="Enter Movie Title Here" >
-	<input type= "submit">
-</form>
+
+	
 
 
-<div id="resultsRow" class="row text-center">
-		<% data["Search"].forEach(function(movie) { %>
-			<div class="col-md-2 col-sm-6">
-				<div class="thumbnail">
-					<img src="<%=movie.Poster%>" alt="">
-					<div class="caption">
-						<strong>
-							<%= movie.Title%>
-						</strong> 
-						- (<%=movie.Year %> )
+	<div id="resultsRow" class="row text-center">
+			<% data["Search"].forEach(function(movie) { %>
+				<div class="col-md-4 col-sm-6">
+					<div class="thumbnail">
+						<img src="<%=movie.Poster%>" alt="">
+						<div class="caption">
+							<strong>
+								<%= movie.Title%>
+							</strong> 
+							- (<%=movie.Year %> )
+						</div>
 					</div>
 				</div>
-			</div>
-		<%});%>
-</div>
+			<%});%>
+	</div>
 
-<a href="/">Search Again</a>
+	<a href="/">Search Again</a>
+</div>
 
 
 <% include partials/footer%>
