--- a/views/results.ejs
+++ b/views/results.ejs
@@ -23,7 +23,7 @@
 			<% data["Search"].forEach(function(movie) { %>
 				<div class="col-md-4 col-sm-6">
 					<div class="thumbnail">
-						<img src="<%=movie.Poster%>" alt="">
+						<img class ="moviePoster" src="<%=movie.Poster%>" alt="">
 						<div class="caption">
 							<strong>
 								<%= movie.Title%>
