--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="/app.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -12,7 +13,7 @@
 	<nav id="navTop" class="navbar navbar-default">
 		<div id="containerText" class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="/">YMDb</a>
+				<a class="navbar-brand" href="/"><i class="fa fa-film" aria-hidden="true"></i> YMDb</a>
 			</div>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
