Added show page to chart

--- a/views/chart.ejs
+++ b/views/chart.ejs
@@ -21,6 +21,7 @@
 				<p><%= movie.year%></p>
 				<img class ="moviePoster" src="<%= movie.poster%>" alt="">
 				<p><%= movie.description%></p>
+				<a class="btn btn-primary" href="/chart/<%=movie._id%>">Learn More</a>
 			</div>
 		</div>
 	<%});%>
