--- a/views/results.ejs
+++ b/views/results.ejs
@@ -30,6 +30,10 @@
 							</strong> 
 							- (<%=movie.Year %> )
 						</div>
+						<div><%=movie.imdbID%></div>
+						<div>
+							<a class="btn btn-primary" href="/chart/<%=movie._imdbID%>">Learn More</a>
+						</div>
 					</div>
 				</div>
 			<%});%>
