Added show page for search results

--- a/views/showResults.ejs
+++ b/views/showResults.ejs
@@ -1,5 +1,10 @@
 <h1>SHOW RESULTS</h1>
 
 <h2><%= data["Title"]%></h2>
+<p><%= data["imdbRating"]%></p>
 <img src="<%= data["Poster"]%>" alt="">
+<p><%= data["Year"]%></p>
+<p><%= data["Released"]%></p>
+<p><%= data["Actors"]%></p>
 <p><%= data["Plot"]%></p>
+
