--- a/views/results.ejs
+++ b/views/results.ejs
@@ -30,9 +30,10 @@
 							</strong> 
 							- (<%=movie.Year %> )
 						</div>
-						<div><%=movie.imdbID%></div>
 						<div>
-							<a class="btn btn-primary" href="/chart/<%=movie._imdbID%>">Learn More</a>
+							<form action="/results/<%=movie.imdbID%>" method="GET">
+								<input type="submit" value="<%=movie.imdbID%>" name="showSearch" class="btn btn-success">
+							</form>
 						</div>
 					</div>
 				</div>
