Added Comments Form

--- a/views/movies/showChart.ejs
+++ b/views/movies/showChart.ejs
@@ -1,4 +1,4 @@
-<% include partials/header%>
+<% include ../partials/header%>
 
 <h1>SHOW PAGE</h1>
 
@@ -16,4 +16,4 @@
 <% }) %>
 
 <a class="btn btn-success" href="/chart">Back</a>
-<% include partials/footer%>
+<% include ../partials/footer%>
