--- a/views/movies/showChart.ejs
+++ b/views/movies/showChart.ejs
@@ -15,5 +15,6 @@
 	</p>
 <% }) %>
 
-<a class="btn btn-success" href="/chart">Back</a>
+<a class="btn btn-success" href="/chart/<%= movie._id%>/comments/new">Add Comment</a>
+
 <% include ../partials/footer%>
