--- a/public/app.css
+++ b/public/app.css
@@ -16,3 +16,19 @@
 	height: 317px;
 	width: 214px;
 }
+
+.thumbnail img {
+	height: 100%;
+}
+
+.thumbnail {
+	padding: 0;
+}
+
+.thumbnail .caption-full {
+	padding: 9px;
+}
+
+#delete-form {
+	display: inline;
+}
