--- a/views/movies/showChart.ejs
+++ b/views/movies/showChart.ejs
@@ -1,6 +1,62 @@
 <% include ../partials/header%>
 
-<h1>SHOW PAGE</h1>
+<div class="container">
+	
+	<div class="row">
+		<div class="col-md-3">
+			<p class="lead">YMDB</p>
+			<div class="list-group">
+				<li class="list-group-item active">Info 1</li>
+				<li class="list-group-item">Info 2</li>
+				<li class="list-group-item">Info 3</li>
+			</div>
+		</div>
+		<div class="col-md-9">
+			<div class="thumbnail">
+				<img class="img-responsive" src="<%=movie.poster%>" alt="">
+				<div class="caption-full">
+					<h4><%= movie.title%></h4>
+					<p><%=movie.description%></p>
+				</div>
+
+				<a class="btn btn-xs btn-warning"href="/chart/<%= movie._id%>/edit">Edit</a>
+
+				<form id="delete-form" action="/chart/<%=movie._id%>?_method=DELETE" method="POST">
+					<button class="btn btn-xs btn-danger">Delete</button>
+				</form>
+			</div>
+		
+
+
+
+	<div class="well">
+		<div class="text-right">
+			<a class="btn btn-success" href="/chart/<%= movie._id%>/comments/new">Add Comment</a>
+		</div>
+		<hr>
+		<% movie.comments.forEach(function(comment){%>
+			<div class="row">
+				<div class="col-md-12">
+					<strong><%= comment.author%></strong>
+					<span class="pull-right">10 days ago</span>
+					<p>
+						<%= comment.text%>
+					</p>
+				</div>
+			</div>
+		<% }); %>
+	</div>
+	</div>
+	</div>
+</div>
+
+
+
+
+
+<% include ../partials/footer%>
+
+<!-- <h1>SHOW PAGE</h1>
 
 <h2><%= movie.title%></h2>
 
@@ -13,8 +69,4 @@
 		<strong><%= comment.author %></strong>
 		- <%= comment.text %>
 	</p>
-<% }) %>
-
-<a class="btn btn-success" href="/chart/<%= movie._id%>/comments/new">Add Comment</a>
-
-<% include ../partials/footer%>
+<% }) %> -->
